2013-05-08  v2.0.1  r646
------------------------------------------------------------------------

  * Improvements to the RPM package spec
    (Credit: Eric Wong)

2013-04-29  v2.0  r639
------------------------------------------------------------------------

  * Use ppoll(2) where possible to improve scalability.
    (Credit: Eric Wong)

  * Optimize kevent() when it is called with a zero timeout.
    (Credit: Eric Wong)

  * Avoid calling getsockopt() on file descriptors that are not sockets.
    (Credit: Eric Wong)

  * Call epoll_wait after linux_kevent_wait_hires()
    (Credit: Eric Wong)

  * Detect regular files correctly 
    (Credit: Eric Wong)

  * Ensure that calling close() on a file descriptor will remove any 
    kevents that reference the descriptor. [merged from ^/branches/stable@551]

  * Remove the SERIALIZE_KEVENT macro, and always protect kevent_copyin() 
    and kevent_copyout() with a mutex.

  * Remove fine-grained locking at the knote level.

  * Add a counter that increments on each each kevent() call. When printing
  debug information within kevent(), display the value of the counter.
  This will be helpful when debugging a multithreaded program that may have
  multiple kevent() calls executing in parallel.    (Credit: Julien Blache)

2010-09-18  v1.0  r344
------------------------------------------------------------------------

  * Support older Linux kernels that do not have the EPOLLRDHUP flag.

  * Add a portable implementation of the EVFILT_TIMER filter.

  * Add Solaris to the list of supported platforms.

  * Fixed the 'make rpm' target to work on CentOS 5.

  * Modified the manpage to remove unimplemented features.

2010-08-05  v0.9.3  r309
------------------------------------------------------------------------

  * Fix a typo in kevent_copyin() that caused EV_RECEIPT to set the
    data field incorrectly in some cases. 
    (Credit to Julien Blache for discovering and fixing this bug)

2010-08-05  v0.9.2  r289