@@ -1,3 +1,8 @@
+HEAD
+------------------------------------------------------------------------
+
+  * Switch to autoconf/automake
+
 2013-05-08  v2.0.1  r646
 ------------------------------------------------------------------------
 
